--- a/src/gardener/Properties/Strings.resx
+++ b/src/gardener/Properties/Strings.resx
@@ -149,7 +149,7 @@
     <value>Схема рынка</value>
     <comment>Схема рынка</comment>
   </data>
-  <data name="News" xml:space="preserve">
+  <data name="Marketnews" xml:space="preserve">
     <value>Новости рынка</value>
     <comment>Новости рынка</comment>
   </data>
