--- a/src/gardener/Properties/Strings.resx
+++ b/src/gardener/Properties/Strings.resx
@@ -125,6 +125,10 @@
     <value>Заявка на аренду помещения</value>
     <comment>Заявка на аренду помещения</comment>
   </data>
+  <data name="Applicationformforleaseofinpremises" xml:space="preserve">
+    <value>Форма заявки на аренду помещения</value>
+    <comment>Форма заявки на аренду помещения</comment>
+  </data>
   <data name="Applicationformforleaseofpremises" xml:space="preserve">
     <value>Форма заявки на сдачу в аренду помещения</value>
     <comment>Форма заявки на сдачу в аренду помещения</comment>
