Закончены все viewModel

--- a/src/gardener/Properties/Strings.resx
+++ b/src/gardener/Properties/Strings.resx
@@ -253,4 +253,8 @@
     <value>Ожидание сети</value>
     <comment>Ожидание сети</comment>
   </data>
+  <data name="SelectFloor" xml:space="preserve">
+    <value>Выбор этажа</value>
+    <comment>Выбор этажа</comment>
+  </data>
 </root>
