--- a/src/gardener/Properties/Strings.zh.resx
+++ b/src/gardener/Properties/Strings.zh.resx
@@ -253,4 +253,8 @@
     <value>等待网络</value>
     <comment>Ожидание сети</comment>
   </data>
+  <data name="SelectFloor" xml:space="preserve">
+    <value>地板的选择</value>
+    <comment>Выбор этажа</comment>
+  </data>
 </root>
