--- a/src/gardener/Properties/Strings.zh.resx
+++ b/src/gardener/Properties/Strings.zh.resx
@@ -186,7 +186,7 @@
     <comment>Схема рынка</comment>
   </data>
   <data name="Marketnews" xml:space="preserve">
-    <value>Market news</value>
+    <value>市场新闻</value>
     <comment>Новости рынка</comment>
   </data>
   <data name="Name" xml:space="preserve">
@@ -256,5 +256,13 @@
   <data name="SelectFloor" xml:space="preserve">
     <value>地板的选择</value>
     <comment>Выбор этажа</comment>
+  </data>
+  <data name="Floor" xml:space="preserve">
+    <value>地板</value>
+    <comment>Этаж</comment>
+  </data>
+  <data name="News" xml:space="preserve">
+    <value>Market news</value>
+    <comment>Новости рынка</comment>
   </data>
 </root>
