--- a/src/gardener/Properties/Strings.vi.resx
+++ b/src/gardener/Properties/Strings.vi.resx
@@ -297,4 +297,8 @@
     <value>Mẫu đơn cho câu hỏi của bạn</value>
     <comment>Форма заявки по интересующим вас вопросам</comment>
   </data>
+  <data name="Input" xml:space="preserve">
+    <value>Lối vào</value>
+    <comment>Вход</comment>
+  </data>
 </root>
